Fixed bug #67406 built-in web-server segfaults on startup

Reproduce on aarch64.

From select man page:
  "select() may update the timeout argument to indicate how much time was left."
So "const" is not ok.